<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivitySeleccion">
    <!--style="?android:attr/buttonBarStyle"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strTitulo"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/teal_700"
        android:fontFamily="sans-serif-black"/>

    <LinearLayout
        android:id="@+id/botton1Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/numeric"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/strDecimal"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnBinario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/binarycode"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/strBinario"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/button2Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOctal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/octagonal"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/strOctal"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnHexadecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/hexagon"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/strHexadecimal"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


</LinearLayout>