<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tablaDeResultados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/table_background"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/content_background"
            android:backgroundTint="@color/teal_700"
            android:gravity="center">

            <TextView
                android:id="@+id/tituloTabla"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/tituloTabla"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/etqColum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/content_background"
                android:backgroundTint="@color/teal_700"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/colUnidad"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/etqColumn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/content_background"
                android:backgroundTint="@color/teal_700"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/colResultados"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/etqDec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_background"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/strDecimal"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/content_background"
                android:text="@string/colVacia"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/etqBin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_background"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/strBinario"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resBinario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/content_background"
                android:text="@string/colVacia"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/etqOct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_background"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/strOctal"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resOctal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/content_background"
                android:text="@string/colVacia"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="5dp">

            <TextView
                android:id="@+id/etqHex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_background"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/strHexadecimal"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resHexadecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/content_background"
                android:text="@string/colVacia"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:foregroundGravity="center_horizontal"
        android:text="Titulo"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/btnConvertir"
        android:textColor="@color/teal_700"
        android:textSize="28sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:strokeColor="@color/teal_700"
        app:strokeWidth="3dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="10dp"
            android:text="@string/etqNumber"
            android:textColor="@color/teal_700"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numTransf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="@string/digAll"
            android:ems="10"
            android:hint="@string/hintNumero"
            android:inputType="textPersonName"
            android:maxLength="8"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_700"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>